--- a/WPF.QuickStart.UI/Views/Common/Dialog/DialogView.xaml
+++ b/WPF.QuickStart.UI/Views/Common/Dialog/DialogView.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="WPF.QuickStart.UI.Views.Common.Dialog.DialogView"
+﻿<Controls:MetroWindow x:Class="WPF.QuickStart.UI.Views.Common.Dialog.DialogView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
     xmlns:ctrl="clr-namespace:WPF.QuickStart.UI.Common.Controls"
     xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro"
     ResizeMode="NoResize" SizeToContent="WidthAndHeight" 
+    xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
     Icon="{Binding SmallIcon}" WindowStartupLocation="CenterOwner">
 
     <ctrl:DialogControl Text="{Binding Text}" Header="{Binding Header}" Icon="{Binding Icon}" FillBrush="{Binding FillBrush}" />
     
-</Window>
+</Controls:MetroWindow>
